--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 					<input type="text" placeholder="Some comment" />
 				</div>
 			</div>
-			<div class="postcard-footer"></div>
+			<div class="postcard-footer">
+				<button>Send my postcard</button>
+			</div>
 		</div>
 	</body>
 </html>
