--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</div>
 			</div>
 			<div class="postcard-footer">
-				<button>Send my postcard</button>
+				<button>Send My Postcard</button>
 			</div>
 		</div>
 	</body>
